--- a/index.html
+++ b/index.html
@@ -1,11 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Netflix</title>
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
+    <div class="main">
+
+        <nav>
+            <span><img src="Assets/Images/logo.svg" alt=""></span>
+            <div>
+                <button class="btn">English</button>
+                <button class="btn-redsm">Sign In</button>
+            </div>
+        </nav>
+
+        <div class="box"></div>
+        <div class="hero">
+
+            <span>Unlimited movies, TV shows and more</span>
+            <span>Watch anywhere. Cancel anytime.</span>
+
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div class="hero-buttons">
+                <input type="text" placeholder="Email address">
+                <button class="btn-redth">Get Started ></button>
+            </div>
+        </div>
+
+
+        <div class="separation"></div>
+    </div>
+
+
+    <section class="first">
+        <div>
+            <span>Enjoy on your TV</span>
+            <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
+        </div>
+
+        <div class="secImg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" id="Image">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
+                id="BGvideo" autoplay loop muted></video>
+        </div>
+    </section>
+
+
+    <div class="separation"></div>
+
+
+
+    <section class="first second">
+        <div class="secImg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
+                data-uia="nmhp-card-animation-asset-image" class="default-ltr-cache-1d3w5wq">
+            <!-- <img src="<div data-uia="nmhp-card-animation-asset-motion" class="default-ltr-cache-xfttou e15c37ii6"><div class="default-ltr-cache-1cn8kex"><img data-uia="nmhp-card-animation-asset-animation" alt="" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/boxshot.png" class="default-ltr-cache-1t1z3a4"></div><div class="default-ltr-cache-tcf860"><div id="" class="default-ltr-cache-162uqtg e15c37ii4" data-uia="">Stranger Things</div><div id="" class="default-ltr-cache-44ib4m e15c37ii3" data-uia="">Downloading...</div></div><div data-uia="nmhp-card-animation-asset-custom" aria-hidden="true" class="default-ltr-cache-1q4up1i e15c37ii5"></div></div>" alt=""> -->
+        </div>
+
+        <div>
+            <span>Download your shows to watch offline</span>
+            <span>Save your favourites easily and always have something to watch.</span>
+        </div>
+    </section>
+
+    <div class="separation"></div>
+
+    <section class="first third">
+        <div>
+            <span>Watch everywhere</span>
+            <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
+        </div>
+
+        <div id="video-container">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png"
+                data-uia="nmhp-card-animation-asset-image" id="foreground-image">
+            <video class="background-video" data-uia="nmhp-card-animation-asset-video" autoplay="" playsinline=""
+                muted="" loop="">
+                <source
+                    src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+                    type="video/mp4">
+            </video>
+
+        </div>
+    </section>
+
+    <div class="separation"></div>
+
+    <section class="first second">
+        <div class="secImg">
+            <img src="https://occ-0-4995-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
+                data-uia="nmhp-card-animation-asset-image" class="default-ltr-cache-1d3w5wq">
+
+        </div>
+
+        <div>
+            <span>Create profiles for kids</span>
+            <span>Send children on adventures with their favourite characters in a space made just for them—free with
+                your membership.</span>
+        </div>
+    </section>
+
+    <div class="separation"></div>
+
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faqbox">
+            <span>What is Netflix?</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                fill="none">
+                <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+        </div>
+
+        <div class="faqbox">
+            <span>How much does Netflix cost?</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                fill="none">
+                <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+        </div>
+
+        <div class="faqbox">
+            <span>Where can I wtch?</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                fill="none">
+                <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+        </div>
+
+
+
+        <div class="faqbox">
+            <span>How do I cancel?</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                fill="none">
+                <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+        </div>
+
+
+
+        <div class="faqbox">
+            <span>What can I watch on Netflix?</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                fill="none">
+                <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+        </div>
+
+        <div class="faqbox">
+            <span>Is Netflix good for kids?</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                fill="none">
+                <path d="M12 4V20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+        </div>
+
+        <div class="end">
+            <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div class="end-buttons">
+                <input type="text" placeholder="Email address">
+                <button class="end-red">Get Started ></button>
+            </div>
+        </div>
+    </section>
+
+    <div class="separation"></div>
+
+
+    <footer>
+        <div class="question">
+            Questions? Call 000-800-919-1694
+        </div>
+        <div class="footer">
+            <div class="footer-items">
+                <a href="faq"> FAQ</a>
+
+                <a href="faq"> Invester Relations</a>
+                <a href="faq"> Privacy</a>
+                <a href="faq"> Speed Test</a>
+            </div>
+
+            <div class="footer-items">
+                <a href="faq">Help Center</a>
+
+                <a href="faq">Jobs</a>
+                <a href="faq">Cookie Preferences</a>
+                <a href="faq">Legal Notices </a>
+
+            </div>
+
+            <div class="footer-items">
+                <a href="faq">Account</a>
+
+                <a href="faq">Ways to Watch</a>
+                <a href="faq">Corporate Information</a>
+                <a href="faq">Only On Netflix</a>
+
+            </div>
+
+            <div class="footer-items">
+                <a href="faq">Media Center</a>
+
+                <a href="faq">Terms of Use</a>
+                <a href="faq">Contact Us</a>
+
+
+            </div>
+        </div>
+
+
+
+
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
